# autonomie

./: .gitignore  .travis.yml  .travis_before_install.sh  3_3_2_postgresql_migration_113f744a4fed.py  ADMIN.rst  COPYRIGHT.txt  CURRENT_VERSION  MANIFEST.in  Makefile  README.rst  Tools  Vagrantfile  base_requirements.txt  conftest.py  development.ini  development.ini.sample  init_db.sh  migrate  production_tmpl.ini  pytest.ini  requirements.txt  runtest.py  setup.cfg  setup.py  setup.sh  test.ini  test.ini.sample  test_requirements.txt  travis.ini
.github/: ISSUE_TEMPLATE.md
autonomie/: __init__.py  celery.py  csv_import.py  default_layouts.py  deform_extend.py  exception.py  fainit.py  faroutes.py  http_method_middleware.py  interfaces.py  layouts.py  log.py  mail.py  production.ini  resources.py  scripts.py  task.py
autonomie/alembic/: __init__.py  env.py  exceptions.py  script.py.mako  utils.py
autonomie/compute/: expense.py  math_utils.py  parser.py  sage.py  task.py
autonomie/deform_templates/: accordion_form.pt  accordion_mapping.pt  amount.mako  autocomple_input.pt  checkbox_readonly.pt  chosen_optgroup.pt  clean_mapping.pt  clean_sequence.pt  dateinput.pt  datetimeinput.pt  disabledinput.mako  discountline_mapping.mako  discountline_mapping_item.mako  discountlines_sequence.mako  discountlines_sequence.pt  discountlines_sequence_item.mako  estimationdetails_item.mako  estimationline_mapping.mako  estimationline_mapping_item.mako  fileupload.mako  fileupload.pt  fixed_len_sequence.pt  fixed_len_sequence_item.pt  form.pt  grid_form.pt  grid_mapping.pt  grid_mapping_item.pt  groupline_mapping.pt  grouplines_sequence.pt  grouplines_sequence_item.pt  hiddeninput.mako  inline_mapping.pt  inline_mapping_item.pt  line.mako  (+27 more)
configure/: all.py  ngdissite  ngensite  tmplengine.py
css_sources/: main.scss
deploy_scripts/: all.py  mysql.py  tmplengine.py  utils.py
docs/: Makefile  README  computing.rst  doc-requirements.txt  documents.rst  hacking.rst
handlebars/: csv_import.mustache  csv_import_job.mustache  expense.mustache  expenseForm.mustache  expenseKmForm.mustache  expenseKmList.mustache  expenseList.mustache  expenseTelForm.mustache  expensetel.mustache  holiday.mustache  holidayForm.mustache  holidayList.mustache  mailing.mustache  serverMessage.mustache
hogan/: expense.mustache  expenseForm.mustache  expenseKm.mustache  expenseKmForm.mustache  expenseKmList.mustache  expenseList.mustache  expenseTelForm.mustache  expenseorphan.mustache  expensetel.mustache  holidayList.mustache
js_sources/: .babelrc  package-lock.json  package.json  webpack.config.js
sample_db/: db.sql  dbautonomie.sql  model.mwb  testdatas.sql
tools/: fake_database.py  fixture_generator.py  new_alembic_revision.sh  remove_task_orphans.py  reset_db.sh  set_all_o_pwd.sh  set_innodb.sh  test_connexion.sh  tests_connexion.py
(+1427 files in other folders)
