[metadata]
name = autonomie
version = 2.0
author = Majerti
author_email = tech@majerti.fr
keywords = pyramid, majerti, web
home_page = ''
project_url = ''
requires_dist =
    pyramid
    SQLAlchemy
tests_require=
    webtest
    pytest
    mock
requires_python = >=2.7
description_file = README.rst
summary = autonomie
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers
    Framework :: Pyramid
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI

[files]
zip_safe = False
packages =
    autonomie
    autonomie.alembic
    autonomie.compute
    autonomie.events
    autonomie.export
    autonomie.i18n
    autonomie.models
    autonomie.models.task
    autonomie.panels
    autonomie.scripts
    autonomie.tests
    autonomie.tests.views
    autonomie.utils
    autonomie.views
    autonomie.views.forms

data_files =
    autonomie =
        setup.cfg
        setup.py
        README.rst
        MANIFEST.in
