[metadata]
name = autonomie
version = 3.2.2
author = Majerti
author_email = tech@majerti.fr
keywords = pyramid, majerti, web
home_page = ''
project_url = ''
requires_dist =
    pyramid
    SQLAlchemy
tests_require=
    webtest
    pytest
    mock
requires_python = >=2.7
description_file = README.rst
summary = autonomie
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers
    Framework :: Pyramid
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI

